--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "fast-csv": "^5.0.1",
+    "fs": "^0.0.1-security",
     "sqlite3": "^5.1.7"
   },
   "scripts": {
